--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Stylish Portfolio
+title: Ielectro Fix Solutions
 ---
 <!-- About -->
 <section class="content-section bg-light" id="about">
@@ -28,7 +28,7 @@ title: Stylish Portfolio
               <i class="icon-screen-smartphone"></i>
             </span>
                 <h4>
-              <strong>Responsive</strong>
+              <strong>Phone Repair</strong>
             </h4>
                 <p class="text-faded mb-0">Looks great on any screen size!</p>
             </div>
@@ -37,7 +37,7 @@ title: Stylish Portfolio
               <i class="icon-pencil"></i>
             </span>
                 <h4>
-              <strong>Redesigned</strong>
+              <strong>IT Consultiong</strong>
             </h4>
                 <p class="text-faded mb-0">Freshly redesigned for Bootstrap 4.</p>
             </div>
@@ -46,7 +46,7 @@ title: Stylish Portfolio
               <i class="icon-like"></i>
             </span>
                 <h4>
-              <strong>Favorited</strong>
+              <strong>Managed Services</strong>
             </h4>
                 <p class="text-faded mb-0">Millions of users
                     <i class="fas fa-heart"></i>
@@ -57,7 +57,7 @@ title: Stylish Portfolio
               <i class="icon-mustache"></i>
             </span>
                 <h4>
-              <strong>Question</strong>
+              <strong>and More</strong>
             </h4>
                 <p class="text-faded mb-0">I mustache you a question...</p>
             </div>
@@ -139,8 +139,10 @@ title: Stylish Portfolio
 <!-- Map -->
 <section id="contact" class="map">
     <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
+    <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3566.93276224818!2d-80.09105334899695!3d26.61860188317298!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d8d99dde1936d1%3A0x12ed6a4e4579b432!2siElectro%20Fix%20Solutions!5e0!3m2!1sen!2sus!4v1655333744543!5m2!1sen!2sus"></iframe>
     <br />
     <small>
-        <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a>
+        <a href="https://goo.gl/maps/xhp4182NATtmGxhn8"></a>
       </small>
 </section>
+ 
