docs(updated-content): added service descr and other links

--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@ title: Ielectro Fix Solutions
     <div class="container text-center">
         <div class="row">
             <div class="col-lg-10 mx-auto">
-                <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
-                <p class="lead mb-5">This theme features a flexible, UX friendly sidebar menu and stock photos from our friends at
-                    <a href="https://unsplash.com/">Unsplash</a>!</p>
+                <h2>We Provide easy solutions for tech</h2>
+                <p class="lead mb-5">We provide a wide variety of cell phone and pc repair services. We also provide IT Consulting, Security, and Software development related services. Whatever your project, large or small, we'll treat it with the same care and attention to detail that we would our own.
                 <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">What We Offer</a>
             </div>
         </div>
@@ -19,8 +18,8 @@ title: Ielectro Fix Solutions
 <section class="content-section bg-primary text-white text-center" id="services">
     <div class="container">
         <div class="content-section-heading">
-            <h3 class="text-secondary mb-0">Services</h3>
-            <h2 class="mb-5">What We Offer</h2>
+            <h3 class="text-secondary mb-0">What We Offer</h3>
+            <h2 class="mb-5">Services</h2>
         </div>
         <div class="row">
             <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
@@ -30,7 +29,7 @@ title: Ielectro Fix Solutions
                 <h4>
               <strong>Phone Repair</strong>
             </h4>
-                <p class="text-faded mb-0">Looks great on any screen size!</p>
+                <p class="text-faded mb-0">cracked screens, battery replacement, water damage.</p>
             </div>
             <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                 <span class="service-icon rounded-circle mx-auto mb-3">
@@ -39,7 +38,7 @@ title: Ielectro Fix Solutions
                 <h4>
               <strong>IT Consultiong</strong>
             </h4>
-                <p class="text-faded mb-0">Freshly redesigned for Bootstrap 4.</p>
+                <p class="text-faded mb-0">As a consulting agency, we have consulted extensively with companies both large and small to ensure that they can reach their technology goals. </p>
             </div>
             <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
                 <span class="service-icon rounded-circle mx-auto mb-3">
@@ -48,18 +47,16 @@ title: Ielectro Fix Solutions
                 <h4>
               <strong>Managed Services</strong>
             </h4>
-                <p class="text-faded mb-0">Millions of users
-                    <i class="fas fa-heart"></i>
-                    Start Bootstrap!</p>
+                <p class="text-faded mb-0">Web and Software Development and hosting services available. whatever your project, large or small - we'll treat it with the same care and attention to detail that we would our own</p>
             </div>
             <div class="col-lg-3 col-md-6">
                 <span class="service-icon rounded-circle mx-auto mb-3">
               <i class="icon-mustache"></i>
             </span>
                 <h4>
-              <strong>and More</strong>
+              <strong>Events</strong>
             </h4>
-                <p class="text-faded mb-0">I mustache you a question...</p>
+                <p class="text-faded mb-0">Event Hosting Available.</p>
             </div>
         </div>
     </div>
@@ -130,10 +127,13 @@ title: Ielectro Fix Solutions
 </section>
 <!-- Call to Action -->
 <section class="content-section bg-primary text-white">
-    <div class="container text-center">
-        <h2 class="mb-4">The buttons below are impossible to resist...</h2>
-        <a href="#" class="btn btn-xl btn-light mr-4">Click Me!</a>
-        <a href="#" class="btn btn-xl btn-dark">Look at Me!</a>
+    <div class="container text-center"> 
+        <h2 class="mb-4">Contact us on Facebook and Follow us on Instagram.</h2>
+        <a href="#" class="btn btn-xl btn-light mr-4">Facebook</a>
+        <!-- 
+        <i class="icon-screen-smartphone"></i>
+         --> 
+        <a href="#" class="btn btn-xl btn-dark">Instagram</a>
     </div>
 </section>
 <!-- Map -->
