--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Ielectro Fix Solutions
     <div class="container text-center">
         <div class="row">
             <div class="col-lg-10 mx-auto">
-                <h2>We Provide easy solutions for tech</h2>
+                <h2>We Provide easy solutions for tech's most </h2>
                 <p class="lead mb-5">We provide a wide variety of cell phone and pc repair services. We also provide IT Consulting, Security, and Software development related services. Whatever your project, large or small, we'll treat it with the same care and attention to detail that we would our own.
                 <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">What We Offer</a>
             </div>
@@ -18,6 +18,7 @@ title: Ielectro Fix Solutions
 <section class="content-section bg-primary text-white text-center" id="services">
     <div class="container">
         <div class="content-section-heading">
+        </br>
             <h3 class="text-secondary mb-0">What We Offer</h3>
             <h2 class="mb-5">Services</h2>
         </div>
@@ -64,10 +65,10 @@ title: Ielectro Fix Solutions
 <!-- Callout -->
 <section class="callout">
     <div class="container text-center">
-        <h2 class="mx-auto mb-5">Welcome to
-          <em>your</em>
-          next website!</h2>
-        <a class="btn btn-primary btn-xl" href="https://startbootstrap.com/template-overviews/stylish-portfolio/">Download Now!</a>
+        <h2 class="mx-auto mb-5">Event Planning
+          <em>and</em>
+          Event Bookings</h2>
+        <a class="btn btn-primary btn-xl" href="">Coming Soon</a>
     </div>
 </section>
 <!-- Portfolio 
