feat(added-images): added icons and images
changed logo image and added new icons

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Ielectro Fix Solutions
   <div class="container">
     <div class="row">
       <div class="col-sm-4">
-        <img src="assets/logo-ielectro/small-ielectro-fix-solutions.jpg" class="img-fluid">
+        <img src="assets/logo-ielectro/transparent-ielectro-fix-solutions.png" class="img-fluid">
       </div>
       <div class="col-sm-8">
         We provide a wide variety of cell phone and pc repair services. We also provide IT Consulting, Security, and Software development related services. 
