--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@ title: Ielectro Fix Solutions
 <!-- Callout -->
 <section class="callout">
     <div class="container text-center">
-        <h2 class="mx-auto mb-5">Event Planning
+        <h2 class="mx-auto mb-5">Come into our store for Phone Repair
           <em>and</em>
-          Event Bookings</h2>
-        <a class="btn btn-primary btn-xl" href="">Coming Soon</a>
+          More</h2>
+        <a class="btn btn-primary btn-xl" href="">Event Booking Coming Soon</a>
     </div>
 </section>
 <!-- Portfolio 
