--- a/index.html
+++ b/index.html
@@ -80,6 +80,32 @@ title: Ielectro Fix Solutions
 </section>
 <!-- Callout -->
 <section class="callout">
+  <div class="row">
+    <div class="col-sm-3">.col-sm-3</div>
+    <table>
+      <tr><th>Our Store</th><td></td></tr>
+      <tr><th>3920 S Congress Avenue</th><td>9am - 5pm</td></tr>
+      <tr><th>Lake Worth, FL</th><td>9am - 5pm</td></tr>
+      <tr><th>33461</th><td>9am - 5pm</td></tr> 
+      </table>
+    <div class="col-sm-6">
+      <h2 class="mx-auto mb-5">Come into our store for Phone Repair
+        <em>and</em>
+        More</h2>
+      <a class="btn btn-primary btn-xl" href="">Event Booking Coming Soon</a>
+    </div>
+    <!-- Hours of Operation -->
+    <div class="col-sm-3">
+      <table>
+        <tr><th>Sunday</th><td>Closed</td></tr>
+        <tr><th>Monday</th><td>9am - 5pm</td></tr>
+        <tr><th>Tuesday</th><td>9am - 5pm</td></tr>
+        <tr><th>Wednesday</th><td>9am - 5pm</td></tr>
+        <tr><th>Thursday</th><td>9am - 5pm</td></tr>
+        </table>
+    </div>
+  </div> 
+
     <div class="container text-center">
         <h2 class="mx-auto mb-5">Come into our store for Phone Repair
           <em>and</em>
