--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ title: Ielectro Fix Solutions
 <!-- Callout -->
 <section class="callout">
   <div class="row">
-    <div class="col-sm-3">.col-sm-3</div>
+    <div class="col-sm-3"></div>
     <table>
       <tr><th>Our Store</th><td></td></tr>
       <tr><th>3920 S Congress Avenue</th><td>9am - 5pm</td></tr>
@@ -102,8 +102,9 @@ title: Ielectro Fix Solutions
         <tr><th>Tuesday</th><td>9am - 5pm</td></tr>
         <tr><th>Wednesday</th><td>9am - 5pm</td></tr>
         <tr><th>Thursday</th><td>9am - 5pm</td></tr>
-        </table>
+      </table>
     </div>
+  </div>
   </div> 
 
     <div class="container text-center">
