--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Ielectro Fix Solutions
+title: IElectro Fix Solutions
 ---
 <!-- About -->
 <section class="content-section bg-light" id="about">
@@ -79,8 +79,7 @@ title: Ielectro Fix Solutions
     </div>
 </section>
 <!-- Callout -->
-<section class="callout">
-  <div class="row">
+<section class="callout"> 
     <div class="col-sm-3"></div>
     <table>
       <tr><th>Our Store</th><td></td></tr>
@@ -97,22 +96,24 @@ title: Ielectro Fix Solutions
     <!-- Hours of Operation -->
     <div class="col-sm-3">
       <table>
-        <tr><th>Sunday</th><td>Closed</td></tr>
-        <tr><th>Monday</th><td>9am - 5pm</td></tr>
-        <tr><th>Tuesday</th><td>9am - 5pm</td></tr>
-        <tr><th>Wednesday</th><td>9am - 5pm</td></tr>
-        <tr><th>Thursday</th><td>9am - 5pm</td></tr>
-      </table>
-    </div>
+        <tr><th>Sunday</th><td>10am - 7pm</td></tr>
+        <tr><th>Monday</th><td>Closed</td></tr>
+        <tr><th>Tuesday</th><td>Closed</td></tr>
+        <tr><th>Wednesday</th><td>10am - 7pm</td></tr>
+        <tr><th>Thursday</th><td>10am - 7pm</td></tr>
+        <tr><th>Friday</th><td>10am - 7pm</td></tr>
+        <tr><th>Saturday</th><td>10am - 7pm</td></tr>
+      </table> 
   </div>
   </div> 
-
+<!-- 
     <div class="container text-center">
         <h2 class="mx-auto mb-5">Come into our store for Phone Repair
           <em>and</em>
           More</h2>
         <a class="btn btn-primary btn-xl" href="">Event Booking Coming Soon</a>
     </div>
+  -->
 </section>
 <!-- Portfolio 
 <section class="content-section" id="portfolio">
