fix(updated-div-columns): fixed div to fit section
added id=contact to secteion and fixed div to show properly

--- a/index.html
+++ b/index.html
@@ -79,14 +79,16 @@ title: IElectro Fix Solutions
     </div>
 </section>
 <!-- Callout -->
-<section class="callout"> 
-    <div class="col-sm-3"></div>
+<section class="callout">  
+  <div class="row" id="contact">
+    <div class="col-sm-3">
     <table>
       <tr><th>Our Store</th><td></td></tr>
       <tr><th>3920 S Congress Avenue</th><td>9am - 5pm</td></tr>
       <tr><th>Lake Worth, FL</th><td>9am - 5pm</td></tr>
       <tr><th>33461</th><td>9am - 5pm</td></tr> 
       </table>
+    </div>
     <div class="col-sm-4">
       <h2 class="mx-auto mb-5">Come into our store for Phone Repair
         <em>and</em>
@@ -104,7 +106,7 @@ title: IElectro Fix Solutions
         <tr><th>Friday</th><td>10am - 7pm</td></tr>
         <tr><th>Saturday</th><td>10am - 7pm</td></tr>
       </table> 
-  </div>
+    </div> 
   </div> 
 <!-- 
     <div class="container text-center">
