testing div fixes

--- a/index.html
+++ b/index.html
@@ -81,23 +81,22 @@ title: IElectro Fix Solutions
 <!-- Callout -->
 <section class="callout">  
   <div class="row" id="contact">
-    <div class="col-sm-3">
-    <table>
+    <div class="col-sm-4">
+    <table class="table">
       <tr><th>Our Store</th><td></td></tr>
-      <tr><th>3920 S Congress Avenue</th><td>9am - 5pm</td></tr>
-      <tr><th>Lake Worth, FL</th><td>9am - 5pm</td></tr>
-      <tr><th>33461</th><td>9am - 5pm</td></tr> 
+      <tr><th>3920 S Congress Avenue</th><td></td></tr>
+      <tr><th>Lake Worth, FL</th><td></td></tr>
+      <tr><th>33461</th><td></td></tr> 
       </table>
     </div>
     <div class="col-sm-4">
-      <h2 class="mx-auto mb-5">Come into our store for Phone Repair
-        <em>and</em>
-        More</h2>
+      <h2 class="mx-auto mb-5">Come into our store for phone repair
+        and consulting</h2>
       <a class="btn btn-primary btn-xl" href="">Event Booking Coming Soon</a>
     </div>
     <!-- Hours of Operation -->
-    <div class="col-sm-3">
-      <table>
+    <div class="col-sm-4">
+      <table class="table"> 
         <tr><th>Sunday</th><td>10am - 7pm</td></tr>
         <tr><th>Monday</th><td>Closed</td></tr>
         <tr><th>Tuesday</th><td>Closed</td></tr>
