--- a/index.html
+++ b/index.html
@@ -116,62 +116,6 @@ title: IElectro Fix Solutions
     </div>
   -->
 </section>
-<!-- Portfolio 
-<section class="content-section" id="portfolio">
-    <div class="container">
-        <div class="content-section-heading text-center">
-            <h3 class="text-secondary mb-0">Portfolio</h3>
-            <h2 class="mb-5">Recent Projects</h2>
-        </div>
-        <div class="row no-gutters">
-            <div class="col-lg-6">
-                <a class="portfolio-item" href="#">
-              <span class="caption">
-                <span class="caption-content">
-                  <h2>Stationary</h2>
-                  <p class="mb-0">A yellow pencil with envelopes on a clean, blue backdrop!</p>
-                </span>
-              </span>
-              <img class="img-fluid" src="{{ site.baseurl }}/assets/img/portfolio-1.jpg" alt="">
-            </a>
-            </div>
-            <div class="col-lg-6">
-                <a class="portfolio-item" href="#">
-              <span class="caption">
-                <span class="caption-content">
-                  <h2>Ice Cream</h2>
-                  <p class="mb-0">A dark blue background with a colored pencil, a clip, and a tiny ice cream cone!</p>
-                </span>
-              </span>
-              <img class="img-fluid" src="{{ site.baseurl }}/assets/img/portfolio-2.jpg" alt="">
-            </a>
-            </div>
-            <div class="col-lg-6">
-                <a class="portfolio-item" href="#">
-              <span class="caption">
-                <span class="caption-content">
-                  <h2>Strawberries</h2>
-                  <p class="mb-0">Strawberries are such a tasty snack, especially with a little sugar on top!</p>
-                </span>
-              </span>
-              <img class="img-fluid" src="{{ site.baseurl }}/assets/img/portfolio-3.jpg" alt="">
-            </a>
-            </div>
-            <div class="col-lg-6">
-                <a class="portfolio-item" href="#">
-              <span class="caption">
-                <span class="caption-content">
-                  <h2>Workspace</h2>
-                  <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
-                </span>
-              </span>
-              <img class="img-fluid" src="{{ site.baseurl }}/assets/img/portfolio-4.jpg" alt="">
-            </a>
-            </div>
-        </div>
-    </div>
-</section>
--->
 <!-- Call to Action -->
 <section class="content-section bg-primary text-white">
     <div class="container text-center"> 
@@ -184,7 +128,7 @@ title: IElectro Fix Solutions
     </div>
 </section>
 <!-- Map -->
-<section id="contact" class="map">
+<section class="map">
     <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3566.93276224818!2d-80.09105334899695!3d26.61860188317298!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d8d99dde1936d1%3A0x12ed6a4e4579b432!2siElectro%20Fix%20Solutions!5e0!3m2!1sen!2sus!4v1655333744543!5m2!1sen!2sus"></iframe>
     <br />
     <small>
