updated tables and hoh

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ title: IElectro Fix Solutions
   <div class="row" id="contact">
     <div class="col-sm-4">
     <table class="table">
-      <tr><th>Our Store</th><td></td></tr>
+      <tr><th><h2>Our Store Location</h2></th><td></td></tr>
       <tr><th>3920 S Congress Avenue</th><td></td></tr>
       <tr><th>Lake Worth, FL</th><td></td></tr>
       <tr><th>33461</th><td></td></tr> 
@@ -97,6 +97,7 @@ title: IElectro Fix Solutions
     <!-- Hours of Operation -->
     <div class="col-sm-4">
       <table class="table"> 
+        <tr><th><h2>Hours of Operation</h2></th><td></td></tr>
         <tr><th>Sunday</th><td>10am - 7pm</td></tr>
         <tr><th>Monday</th><td>Closed</td></tr>
         <tr><th>Tuesday</th><td>Closed</td></tr>
