moved hoh and address

--- a/index.html
+++ b/index.html
@@ -80,34 +80,10 @@ title: IElectro Fix Solutions
 </section>
 <!-- Callout -->
 <section class="callout">  
-  <div class="row" id="contact">
     <div class="col-sm-4">
-    <table class="table">
-      <tr><th><h3>Our Store Location</h3></th><td></td></tr>
-      <tr><th>3920 S Congress Avenue</th><td></td></tr>
-      <tr><th>Lake Worth, FL</th><td></td></tr>
-      <tr><th>33461</th><td></td></tr> 
-      </table>
+      <h2 class="mx-auto mb-5">Event Calendar and Bookings</h2>
+      <a class="btn btn-primary btn-xl" href="">Coming Soon</a>
     </div>
-    <div class="col-sm-4">
-      <h2 class="mx-auto mb-5">Come into our store for phone repair
-        and consulting</h2>
-      <a class="btn btn-primary btn-xl" href="">Event Booking Coming Soon</a>
-    </div>
-    <!-- Hours of Operation -->
-    <div class="col-sm-4">
-      <table class="table"> 
-        <tr><th><h3>Hours of Operation</h3></th><td></td></tr>
-        <tr><th>Sunday</th><td>10am - 7pm</td></tr>
-        <tr><th>Monday</th><td>Closed</td></tr>
-        <tr><th>Tuesday</th><td>Closed</td></tr>
-        <tr><th>Wednesday</th><td>10am - 7pm</td></tr>
-        <tr><th>Thursday</th><td>10am - 7pm</td></tr>
-        <tr><th>Friday</th><td>10am - 7pm</td></tr>
-        <tr><th>Saturday</th><td>10am - 7pm</td></tr>
-      </table> 
-    </div> 
-  </div> 
 <!-- 
     <div class="container text-center">
         <h2 class="mx-auto mb-5">Come into our store for Phone Repair
@@ -127,6 +103,32 @@ title: IElectro Fix Solutions
          --> 
         <a href="#" class="btn btn-xl btn-dark">Instagram</a>
     </div>
+
+
+    <div class="row" id="contact">
+      <div class="col-sm-4">
+      <table class="table">
+        <tr><th><h3>Our Store Location</h3></th><td></td></tr>
+        <tr><th>3920 S Congress Avenue</th><td></td></tr>
+        <tr><th>Lake Worth, FL</th><td></td></tr>
+        <tr><th>33461</th><td></td></tr> 
+        </table>
+      </div>
+        <!-- Hours of Operation -->
+        <div class="col-sm-4">
+          <table class="table"> 
+            <tr><th><h3>Hours of Operation</h3></th><td></td></tr>
+            <tr><th>Sunday</th><td>10am - 7pm</td></tr>
+            <tr><th>Monday</th><td>Closed</td></tr>
+            <tr><th>Tuesday</th><td>Closed</td></tr>
+            <tr><th>Wednesday</th><td>10am - 7pm</td></tr>
+            <tr><th>Thursday</th><td>10am - 7pm</td></tr>
+            <tr><th>Friday</th><td>10am - 7pm</td></tr>
+            <tr><th>Saturday</th><td>10am - 7pm</td></tr>
+          </table> 
+        </div> 
+      </br>
+    </div> 
 </section>
 <!-- Map -->
 <section class="map">
