fix(fixed-container-center): container text-center div was removed, but is back

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@ title: IElectro Fix Solutions
 </section>
 <!-- Callout -->
 <section class="callout">  
+  <div class="container text-center">
     <div class="col-sm-4">
       <h2 class="mx-auto mb-5">Event Calendar and Bookings</h2>
       <a class="btn btn-primary btn-xl" href="">Coming Soon</a>
