fix(updated-contact-grid): moved div in contact us section

--- a/index.html
+++ b/index.html
@@ -96,17 +96,10 @@ title: IElectro Fix Solutions
 </section>
 <!-- Call to Action -->
 <section class="content-section bg-primary text-white">
-    <div class="container text-center"> 
-        <h2 class="mb-4">Contact us on Facebook and Follow us on Instagram.</h2>
-        <a href="#" class="btn btn-xl btn-light mr-4">Facebook</a>
-        <!-- 
-        <i class="icon-screen-smartphone"></i>
-         --> 
-        <a href="#" class="btn btn-xl btn-dark">Instagram</a>
-    </div>
-
-
     <div class="row" id="contact">
+
+      <h2 class="mb-4">Contact Us</h2>
+      <!-- Address -->
       <div class="col-sm-4">
       <table class="table">
         <tr><th><h3>Our Store Location</h3></th><td></td></tr>
@@ -115,7 +108,16 @@ title: IElectro Fix Solutions
         <tr><th>33461</th><td></td></tr> 
         </table>
       </div>
-        <!-- Hours of Operation -->
+    <!-- Social Media Links -->
+    <div class="container text-center"> 
+      <h2 class="mb-4">Contact us on Facebook and Follow us on Instagram.</h2>
+      <a href="#" class="btn btn-xl btn-light mr-4">Facebook</a>
+      <!-- 
+      <i class="icon-screen-smartphone"></i>
+        --> 
+      <a href="#" class="btn btn-xl btn-dark">Instagram</a>
+    </div>
+      <!-- Hours of Operation -->
         <div class="col-sm-4">
           <table class="table"> 
             <tr><th><h3>Hours of Operation</h3></th><td></td></tr>
