test(adding-column-to-about-section): testing nested divs

--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@ title: IElectro Fix Solutions
         We provide a wide variety of cell phone and pc repair services. We also provide IT Consulting, Security, and Software development related services. 
         Whatever your project, large or small, we'll treat it with the same care and attention to detail that we would our own.
       </div> 
+      <div class="row">
+        <div class="col-sm-8">
+          .col-sm-8
+          <div class="row">
+            <div class="col-sm-6">.col-sm-6</div>
+            <div class="col-sm-6">.col-sm-6</div>
+          </div>
+        </div>
+        <div class="col-sm-4">.col-sm-4</div>
+      </div> 
     </div>
   </div>
     <!--
@@ -95,9 +105,10 @@ title: IElectro Fix Solutions
 </section>
 <!-- Call to Action -->
 <section class="content-section bg-primary text-white">
+  <div class="container text-center"> 
+    <h2 class="mb-4">Contact Us</h2>
+  </div>
     <div class="row" id="contact">
-
-      <h2 class="mb-4">Contact Us</h2>
       <!-- Address -->
       <div class="col-sm-4">
       <table class="table">
