test(added-address-and-Hoh-to-about-section): testing about section divs

--- a/index.html
+++ b/index.html
@@ -12,6 +12,30 @@ title: IElectro Fix Solutions
       <div class="col-sm-8">
         We provide a wide variety of cell phone and pc repair services. We also provide IT Consulting, Security, and Software development related services. 
         Whatever your project, large or small, we'll treat it with the same care and attention to detail that we would our own.
+        <div class="row">
+          <div class="col-sm-6">
+            <table class="table">
+              <tr><th><h3>Our Store Location</h3></th><td></td></tr>
+              <tr><th>3920 S Congress Avenue</th><td></td></tr>
+              <tr><th>Lake Worth, FL</th><td></td></tr>
+              <tr><th>33461</th><td></td></tr> 
+              </br>
+              </table>
+          </div>
+          <div class="col-sm-6">
+            <table class="table"> 
+              <tr><th><h3>Hours of Operation</h3></th><td></td></tr>
+              <tr><th>Sunday</th><td>10am - 7pm</td></tr>
+              <tr><th>Monday</th><td>Closed</td></tr>
+              <tr><th>Tuesday</th><td>Closed</td></tr>
+              <tr><th>Wednesday</th><td>10am - 7pm</td></tr>
+              <tr><th>Thursday</th><td>10am - 7pm</td></tr>
+              <tr><th>Friday</th><td>10am - 7pm</td></tr>
+              <tr><th>Saturday</th><td>10am - 7pm</td></tr>
+            </br>
+            </table> 
+          </div>
+        </div>
       </div> 
       <div class="row">
         <div class="col-sm-8">
