--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ title: IElectro Fix Solutions
                 <h4>
               <strong>Events</strong>
             </h4>
-                <p class="text-faded mb-0">Event Hosting Available.</p>
+                <p class="text-faded mb-0" >Event Hosting Available.</p>
             </div>
         </div>
     </div>
@@ -92,7 +92,7 @@ title: IElectro Fix Solutions
 <!-- Callout -->
 <section class="callout">  
   <div class="container text-center"> 
-      <h2 class="mx-auto mb-5">Event Calendar and Bookings</h2>
+      <h2 class="mx-auto mb-5" color="text-white" >Event Calendar and Bookings</h2>
       <a class="btn btn-primary btn-xl" href="">Coming Soon</a>
   </div>
 
