fix(fixed-text-color-for-header): added white to header text
'

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@ title: IElectro Fix Solutions
 <!-- Callout -->
 <section class="callout">  
   <div class="container text-center"> 
-      <h2 class="mx-auto mb-5" color="text-white" >Event Calendar and Bookings</h2>
-      <a class="btn btn-primary btn-xl" href="">Coming Soon</a>
+      <h2 class="mx-auto mb-5" style="color:white;" >Come into the store for Cell Phone repair</h2>
+      <a class="btn btn-primary btn-xl" href="">Booking Events Coming Soon</a>
   </div>
 
 </section>
